--- a/src/ProductItem.css
+++ b/src/ProductItem.css
@@ -1,61 +1,49 @@
-.product-item__img {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.product-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 992px;
+  height: 60px;
+  background: #ffffff;
+  box-shadow: 0px 2px 2px rgba(174, 176, 181, 0.314986);
+  border-radius: 6px;
+  margin-top: 8px;
+}
+
+.product-item__brand {
   display: flex;
   align-items: center;
 }
 
-.product-item {
-  width: 1066px;
-  background: #ffffff;
-  box-shadow: 0px 2px 2px rgba(174, 176, 181, 0.314986);
-  border-radius: 6px;
+.product-item__img {
+  width: 40px;
+  height: 40px;
 }
 
-.product-item th {
-  font-family: "Source_Sans_Pro", sans-serif;
-  background-color: #fcb600;
-  text-transform: uppercase;
-  color: #2d3a45;
-  font-size: 12px;
-  padding: 5px 0;
+.product-item__img img {
+  width: 100%;
+  border-radius: 50%;
 }
 
-.product-item th:nth-child(1) {
-  width: 282px;
-}
-
-.product-item th:nth-child(2) {
-  width: 172.5px;
-}
-
-.product-item th:nth-child(3) {
-  width: 160px;
-}
-
-.product-item th:nth-child(4) {
-  width: 250px;
-}
-
-.product-item th:nth-child(5) {
-  width: 197.5px;
-}
-
-.product-name {
-  margin-left: 28px;
-}
-
-.product-item td:nth-child(5) {
+.product-item__action {
+  width: 95px;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.product-item .path,
-.product-item .delete {
+.product-item__action > div {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 32px;
   height: 32px;
-  margin-right: 27px;
-  background: #ffffff;
   box-shadow: 0px 2px 2px rgba(174, 176, 181, 0.314986);
   border-radius: 16px;
 }
